<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="luas">Luas</string>
    <string name="share">share</string>
    <string name="hitung">Hitung</string>
    <string name="tinggi">Tinggi</string>
    <string name="alas">Alas</string>
    <string name="keliling">Keliling</string>
    <string name="lebar">lebar</string>
    <string name="panjang">panjang</string>
    <string name="share_PP">Persegi Panjang Dengan Panjang %1$d dan lebar %2$d mempunya luas %3$d dan keliling %4$d</string>
</resources>
